--- a/ML_Udacity_Capstone/web/templates/index.html
+++ b/ML_Udacity_Capstone/web/templates/index.html
@@ -17,7 +17,7 @@
         <p style="color: red">{{ error }}</p>
       {% endif %}
       <br>
-      <p>by Silvio Fragnani da Silva<br>silviofragnanisilva at gmail.com</p>
+      <p>by Vedangi Deshpande<br>vedangi.deshpande18@vit.edu</p>
     </div>
   </body>
 </html>
